added jit and made IR capitalized

--- a/inst/latexStyles/acronymsGlossaryDefs.tex
+++ b/inst/latexStyles/acronymsGlossaryDefs.tex
@@ -4,7 +4,7 @@
 \newacronym{gui}{GUI}{graphical user interface}
 \newacronym{repl}{REPL}{read-eval-print loop}
 \newacronym{SO}{SO}{StackOverflow}
-\newacronym{ir}{IR}{Intermediate Representation}
+\newacronym{IR}{IR}{Intermediate Representation}
 \newacronym{CRAN}{CRAN}{Central \proglang{R} Archive Network}
 \newacronym{ocr}{OCR}{optical character recognition}
 
@@ -26,6 +26,8 @@
 \newacronym{cpu}{CPU}{Central Processing Unit}
 
 \newacronym{simd}{SIMD}{Single Instruction, Multiple Data}
+
+\newacronym{jit}{JIT}{Just in Time}
 
 %\newacronym{}{}{}
 
