--- a/inst/latexStyles/bookMacros.tex
+++ b/inst/latexStyles/bookMacros.tex
@@ -1,3 +1,4 @@
+\write16{Start of bookMacros}
 \usepackage[many]{tcolorbox}
 \usepackage{morewrites}
 \usepackage{minted}
@@ -412,7 +413,15 @@
 \DefineVerbatimEnvironment{CodeInput}{Verbatim}{fontshape=sl}
 \DefineVerbatimEnvironment{CodeOutput}{Verbatim}{}
 
+\ifUseMinted
+\newenvironment{Rfunction}
+ {\VerbatimEnvironment
+       \begin{minted}[numbers=left]{R}}
+  {\end{minted}}
+\else
 \DefineVerbatimEnvironment{Rfunction}{Verbatim}{formatcom=\color{rcolor}}
+\fi
+
 \DefineVerbatimEnvironment{Rplot}{Verbatim}{formatcom=\color{rcolor}}
 
 %\DefineVerbatimEnvironment{Rcode}{Verbatim}{formatcom=\color{rcode}}
@@ -669,3 +678,5 @@
 
 
 \input{acronymsGlossaryDefs}
+
+\write16{End of bookMacros}
