ShError and DllWord macros

--- a/inst/latexStyles/bookMacros.tex
+++ b/inst/latexStyles/bookMacros.tex
@@ -271,6 +271,7 @@
 \def\Pymodule#1{\textbf{\color{pycolor}#1}}
 
 
+
 \def\LLDBCmd#1{\textbf{\color{lldbcolor}#1}}
 
 \let\SamePkgColor\true
@@ -345,6 +346,7 @@
 \def\XPathTrue{\texttt{\color{xpcolor}true}}
 
 \def\DLL#1{\texttt{lib#1}}
+\def\DllWord#1{\textit{DLL/DSO}}
 
 \def\JSONArray#1{\textsl{\color{jscolor}#1}}
 \def\JSONBool#1{\textsl{\color{jscolor}#1}}
@@ -480,6 +482,7 @@
 
 \DefineVerbatimEnvironment{ShCode}{Verbatim}{formatcom=\color{shcolor}}
 \DefineVerbatimEnvironment{ShOutput}{Verbatim}{formatcom=\color{shcolor}}
+\DefineVerbatimEnvironment{ShError}{Verbatim}{formatcom=\color{shcolor}}
 \newenvironment{ShCodePar}{\marginnote{{\MarginLangBox{Shell}}}[1.75\baselineskip]\ignorespaces}{}
 
 
